--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,6 @@ jobs:
             cd ~/compose-lab
             git fetch origin
             git reset --hard origin/main
+            docker compose pull
             docker compose up -d --force-recreate
             docker compose ps
