--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Prepare SSH key
-        env:
-          SSH_KEY_B64: ${{ secrets.SSH_KEY_B64 }}
-        run: |
-          set -e
-          echo "$SSH_KEY_B64" | base64 -d > /tmp/key
-          chmod 600 /tmp/key
-          ssh-keygen -lf /tmp/key
+  env:
+    SSH_KEY_B64: ${{ secrets.SSH_KEY_B64 }}
+  run: |
+    set -e
+    echo "$SSH_KEY_B64" | tr -d '\n\r ' | base64 -d > /tmp/key
+    chmod 600 /tmp/key
+    ssh-keygen -lf /tmp/key
+
 
       - name: Deploy via SSH
         env:
