--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,25 +18,6 @@ jobs:
           chmod 600 "$KEY_PATH"
           ssh-keygen -lf "$KEY_PATH"
 
-      - name: Debug SSH_HOST/SSH_USER (no yaml break)
-        env:
-          SSH_HOST_RAW: ${{ secrets.SSH_HOST }}
-          SSH_USER_RAW: ${{ secrets.SSH_USER }}
-        run: |
-          set -e
-          SSH_HOST="$(printf '%s' "$SSH_HOST_RAW" | tr -d '\r\n ' )"
-          SSH_USER="$(printf '%s' "$SSH_USER_RAW" | tr -d '\r\n ' )"
-
-          echo "SSH_HOST='$SSH_HOST'"
-          echo "SSH_USER='$SSH_USER'"
-          echo "HOST_LEN=$(printf '%s' "$SSH_HOST" | wc -c)"
-          echo "USER_LEN=$(printf '%s' "$SSH_USER" | wc -c)"
-
-          echo "HOST_HEX=$(printf '%s' "$SSH_HOST_RAW" | od -An -tx1 | tr -d ' \n')"
-          echo "USER_HEX=$(printf '%s' "$SSH_USER_RAW" | od -An -tx1 | tr -d ' \n')"
-
-          getent hosts "$SSH_HOST" || true
-
       - name: Deploy via SSH
         env:
           SSH_HOST_RAW: ${{ secrets.SSH_HOST }}
@@ -50,9 +31,16 @@ jobs:
           ssh -o StrictHostKeyChecking=no -o ConnectTimeout=20 -i "$KEY_PATH" "${SSH_USER}@${SSH_HOST}" bash -s <<'EOF'
           set -e
           cd ~/compose-lab
+
           git fetch origin
-          git reset --hard origin/main
+          git pull --rebase origin main
+
           docker compose pull
           docker compose up -d --force-recreate
+
+          echo "== compose ps =="
           docker compose ps
+
+          echo "== last 30 lines of web logs =="
+          docker compose logs --tail=30 web
           EOF
